# chrome-ext-thon

./: .env.example  .gitignore  .pdm-python  Dockerfile  Dockerfile_mac  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/workflows/: api-docker-image.yml
api/chrome_ext_thon/: __init__.py  configs.py  google_utils.py  local_test.py  models.py  test_data.json  utils.py
public/: manifest.json  options.html  sidebar.html
src/: ai.d.ts  chrome.d.ts  data.ts  globals.css  index.tsx  options.tsx  popup.tsx  service-worker.ts  sidebar.tsx  theme.ts
src/components/: helpers.ts  side-panel.module.css  side-panel.tsx
src/components/news-sites/: news-bias-list.ts  news-bias.ts
src/components/options/: index.ts  options-page.tsx  options.module.css  options.tsx
src/components/options/options/: data.ts  options.module.css  options.tsx
src/components/options/provider/: index.ts  provider.tsx
src/components/scan-popup/: index.ts  scan-popup.tsx
src/components/search-result/: search-result.module.css  search-result.tsx
src/libs/: constants.ts  domain-check.ts  helpers.ts  index.ts
src/libs/extension/: handler.ts
src/services/ai-service/: ai-module.js  ai-service.ts  helpers.ts
src/services/ai-service/prompt/: prompt.ts
src/services/ai-service/prompts/: prompts.ts
src/services/api-service/: api-service.ts
src/services/chrome-service/: chrome-service.ts  index.ts
src/services/news-service/: data.ts  index.ts  news-service.ts
webpack/: webpack.common.js
(+11 files in other folders)
